# publetry

./: .gitattributes  .gitignore  dune  dune-project  flake.nix  poems.json  publetry.opam
lib/: db.ml  db.mli  dune  epub.ml  epub.mli  web.ml  web.mli
test/: dune  test_epub.ml  test_publetry.ml
tools/: build_db.ml  dune
