(rule
 (target publetry.db)
 (deps
  (:build_db tools/build_db.exe)
  (file poems.json))
 (action
  (run %{build_db} %{target} poems.json)))

(install
 (section share_root)
 (files publetry.db))

(env
 (dev
  (flags (:standard)))
 (release
  (ocamlopt_flags
   (:standard -O3)))
 (dcmm
  (ocamlopt_flags
   (:standard -O3 -S -dcmm -dump-into-file -g)))
 (dlambda
  (ocamlopt_flags
   (:standard -O3 -S -dlambda -dump-into-file -g))))
