(rule
 (target publetry.db)
 (deps
  (file ../publetry.db))
 (action
  (progn
   (copy ../publetry.db publetry.db)
   (run chmod +w publetry.db))))

(test
 (name test_publetry)
 (libraries publetry caqti lwt lwt.unix)
 (deps publetry.db))

(test
 (name test_epub)
 (libraries publetry lwt lwt.unix))
